# adk-recipes

./: .env.example  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
agents/custom_agent/: agent.py  main.py
agents/guard_rails/: _guard_rails.py  agent.py
